# bit-framework

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/changelog/: SKILL.md
.claude/skills/release/: SKILL.md
bit-assets/: package.json
bit-behaviortree/: package.json
bit-condition/: package.json
bit-core/: package.json
bit-core/src/structures/: LinkedList.ts
bit-core/src/timer/: InnerTimer.ts  Timer.ts  TimerNodePool.ts
bit-demo/: .gitignore  .mcp.json  CLAUDE.md  README.md  eslint.config.mjs  package.json  tsconfig.eslint.json  tsconfig.json
bit-demo/.claude/: settings.json
bit-demo/.cursor/: mcp.json
bit-demo/FguiCreator3.8/: FguiCreator3.8.fairy
bit-demo/bit-templates/: ExampleECSComponent.ts  ExampleECSSystem.ts  ExampleManager.ts  ExampleWindow.ts
bit-demo/docs/: eslint-rules.md
bit-demo/excel/: test.xlsx
bit-demo/lib.d.ts/: SDKHelper.d.ts
bit-demo/native/engine/android/: CMakeLists.txt
bit-demo/native/engine/android/app/: build.gradle  proguard-rules.pro
bit-demo/native/engine/android/app/src/com/cocos/game/: AppActivity.java
bit-demo/native/engine/android/app/src/com/kunpo/: KunpoHelper.java
bit-demo/proto/: AutoExport.js  CommonMessage.proto  test.proto
bit-ec/: package.json
bit-ecs/: package.json
bit-ecs/src/: ECSDecorator.ts  World.ts
bit-event/: package.json
bit-hotupdate/: package.json
bit-minigame/: package.json
bit-net/: package.json
bit-quadtree/: package.json
bit-ui/: package.json
docs/: ARCHITECTURE.md  COMMANDS.md
(+196 files in other folders)
